added loader fight

--- a/arenas.html
+++ b/arenas.html
@@ -48,9 +48,9 @@
 							</label>
 						</div>
 					</div>
-					<div class="buttonWrap">
+					<!-- <div class="buttonWrap">
 						<button class="button" type="submit">Fight</button>
-					</div>
+					</div> -->
 				</form>
 			</div>
 			<div class="chat"></div>
